# g2opy

./: CMakeLists.txt  README.md  setup.py
g2o/examples/: CMakeLists.txt
g2o/examples/camrig/: CMakeLists.txt  camrig_demo.cpp
g2o/types/icp/: types_icp.cpp  types_icp.h
g2o/types/object_slam/: CMakeLists.txt  types_object_slam.cpp  types_object_slam.h
g2o/types/slam3d_addons/: CMakeLists.txt  edge_se3_plane.cpp  edge_se3_plane.h
python/: CMakeLists.txt
python/core/: eigen_types.h  hyper_graph.h  optimization_algorithm.h  sparse_optimizer.h
python/examples/: pose_graph_g2o_SE3.py  sphere.g2o
python/types/: types.h
python/types/object_slam/: types_object_slam.h
python/types/sba/: types_six_dof_expmap.h
python/types/sim3/: sim3.h  types_seven_dof_expmap.h
python/types/slam3d_addons/: edge_plane.h  edge_se3_plane.h  plane3d.h  types_slam3d_addons.h  vertex_plane.h
